--- a/c.html
+++ b/c.html
@@ -1,1 +1,9 @@
-fgasf
+<html>
+    <head>
+        <h1>My html file</h1>
+
+    </head>
+<body>
+    <p>THIS IS HTML FILE to push into github</p>
+</body>
+    </html>
